--- a/biografia.html
+++ b/biografia.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
-    <link rel="stylesheet" type="text/css" href="css/home.css"/>
+    <title>Biografia</title>
+    <link rel="stylesheet" type="text/css" href="css/biografia.css"/>
 </head>
 <body background="imagens/fundo.png">
     <center>
@@ -30,7 +30,8 @@
     </div>
 
     <div class="sobre">
-        <p class="titulo"> Sobre Anna Bella</p>
+        <p class="titulo"> Biografia </p>
+        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur neque dolore mollitia voluptates iste maxime provident fugit explicabo voluptatibus, fuga, eos saepe dolores esse unde cumque sint beatae dolorem. Ducimus.</p>
         <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur neque dolore mollitia voluptates iste maxime provident fugit explicabo voluptatibus, fuga, eos saepe dolores esse unde cumque sint beatae dolorem. Ducimus.</p>
     </div>
     <h4>TODOS OS DIREITOS RESERVADOS</h4>
