--- a/contato.html
+++ b/contato.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
-    <link rel="stylesheet" type="text/css" href="css/home.css"/>
+    <title>Contato</title>
+    <link rel="stylesheet" type="text/css" href="css/contato.css"/>
 </head>
 <body background="imagens/fundo.png">
     <center>
     <img src="imagens/capa.png" alt="foto_capa">
-
     <div class="menu">
         <section class="opcoes"> 
             <a href="index.html" class="link">HOME    |</a>
@@ -30,8 +29,13 @@
     </div>
 
     <div class="sobre">
-        <p class="titulo"> Sobre Anna Bella</p>
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur neque dolore mollitia voluptates iste maxime provident fugit explicabo voluptatibus, fuga, eos saepe dolores esse unde cumque sint beatae dolorem. Ducimus.</p>
+        <p class="titulo"> Contato </p>
+        <p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus tenetur blanditiis cupiditate? Magni adipisci ab explicabo in animi, doloremque est quasi.</p>
+        <img src="imagens/foto1.png" class="imagem" alt="foto1">
+        <br>
+        <p class="texto">e-mail: contato@annabella.com.br</p>
+        <p class="texto">telefone: (11) 9978-6589</p>
+
     </div>
     <h4>TODOS OS DIREITOS RESERVADOS</h4>
     </center>
