--- a/campanha.html
+++ b/campanha.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
-    <link rel="stylesheet" type="text/css" href="css/home.css"/>
+    <title>Campanhas Publicitárias</title>
+    <link rel="stylesheet" type="text/css" href="css/campanha.css"/>
 </head>
 <body background="imagens/fundo.png">
     <center>
     <img src="imagens/capa.png" alt="foto_capa">
-
     <div class="menu">
         <section class="opcoes"> 
             <a href="index.html" class="link">HOME    |</a>
@@ -30,8 +29,16 @@
     </div>
 
     <div class="sobre">
-        <p class="titulo"> Sobre Anna Bella</p>
+        <p class="titulo"> Campanhas publicitárias </p>
         <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur neque dolore mollitia voluptates iste maxime provident fugit explicabo voluptatibus, fuga, eos saepe dolores esse unde cumque sint beatae dolorem. Ducimus.</p>
+        <img src="imagens/foto1.png" class="imagem" alt="foto1">
+
+        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur neque dolore mollitia voluptates iste maxime provident fugit explicabo voluptatibus, fuga, eos saepe dolores esse unde cumque sint beatae dolorem. Ducimus.</p>
+        <img src="imagens/foto2.png" class="imagem" alt="foto2">
+
+        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur neque dolore mollitia voluptates iste maxime provident fugit explicabo voluptatibus, fuga, eos saepe dolores esse unde cumque sint beatae dolorem. Ducimus.</p>
+        <img src="imagens/foto3.png" class="imagem" alt="foto3">
+
     </div>
     <h4>TODOS OS DIREITOS RESERVADOS</h4>
     </center>
